# Celestial-Catcher

./: .env.example  .gitignore  README.md  docker-compose.yml  tmp.env.add
db/: init.sql
services/pascal-legacy/: Dockerfile  converter.py  main.pas  run.sh
services/php-web/: .env.example  Dockerfile  composer.json  entrypoint.sh  nginx.conf
services/php-web/app/Http/Controllers/: IssController.php
services/php-web/app/Providers/: AppServiceProvider.php
services/php-web/bootstrap/: app.php
services/php-web/config/: cache.php
services/php-web/dashboard/: iss.blade.php
services/php-web/resources/views/dashboard/: iss.blade.php
services/php-web/resources/views/layouts/: app.blade.php
services/php-web/routes/: web.php
services/php-web/views/dashboard/: iss.blade.php  osdr.blade.php
services/php-web/views/layouts/: app.blade.php
services/rust-iss/: Cargo.toml  Dockerfile
services/rust-iss/src/: main.rs
services/rust-iss/src/config/: mod.rs
services/rust-iss/src/domain/: mod.rs
services/rust-iss/src/handlers/: mod.rs
services/rust-iss/src/repo/: mod.rs
services/rust-iss/src/routes/: mod.rs
services/rust-iss/src/services/: collector.rs
