[package]
name = "rust_iss"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.2"

sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.16.1", features = ["derive"] }

chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
dotenv = "0.15.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }

home = "=0.5.11"